fix ugly gap

--- a/src/organisms/video-guide/_video-guide.scss
+++ b/src/organisms/video-guide/_video-guide.scss
@@ -29,6 +29,8 @@
 		z-index: 1;
 		justify-content: center;
 		display: none;
+		margin: 0;
+		padding: 0;
 
 		&:first-child,
 		&.is-current {
